tests/NormalTests/paczka1/fuzzy1/25398718.err
Error in line 7: WBwzWmrGE8N S292 74,6
Error in line 11: S292 A922 7,9
Error in line 26: dphGNFIS S293 75,5
Error in line 28: crv S293 37,9
Error in line 34: crv A922 10,9
Error in line 16: WBwzWmrGE8N A922 35,4
